@@ -253,7 +253,10 @@ public class ConsumeFragment extends BaseFragment implements ScanInputCaptureMan
 
     @Override
     public void onBarcodeResult(BarcodeResult result) {
-        if(result.getText().isEmpty()) resumeScan();
+        if(result.getText().isEmpty()) {
+            resumeScan();
+            return;
+        }
         if(!viewModel.isQuickModeEnabled()) viewModel.getFormData().toggleScannerVisibility();
         viewModel.onBarcodeRecognized(result.getText());
     }
